ajout de la pgae d'accueil, son css, footer.css et maj du root.css

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -14,7 +14,7 @@
     --title-color: #EEE82C;
     --font-color: #0E3530;
     --cta: #0FA3B1;
-    --cta-hover: #CDEDF6;
+    --cta-hover: #0fa3b1ab;
     --main-bg-color: #0E3530;
     --bg-body: #F9F7F3;
 }
