--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,7 @@
-
+body{
+    background-image:url(../R.jpg);
+    background-size: cover;
+}
 main {
     display: flex;
     flex-direction: column;
@@ -11,7 +14,7 @@ main {
 
 
 .formsection {
-    background-color: #d3d3d3; 
+    background-color: #ffffff; 
     padding: 30px;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -40,6 +43,7 @@ label {
 
 
 input[type="email"],
+input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
@@ -99,3 +103,15 @@ button:active {
         padding: 20px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    body {
+        background-position: center;
+        background-size: contain;
+    }
+    
+    .container {
+        width: 90%; 
+    }
+}
+
