--- a/public/css/commentaire.css
+++ b/public/css/commentaire.css
@@ -3,10 +3,55 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
     background-color: var(--bg-body);
+}
+.recherche form{
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.recherche input{
+    width: 350px;
+    height: 30px;
+    border: 2px solid var(--font-color);
+    border-radius: 15px;
+    padding: 5px;
+    background-color: var(--bg-body);
+    color: var(--font-color);
+}
+
+.recherche button{
+    width: 150px;
+    height: 40px;
+    border: none;
+    border-radius: 15px;
+    background-color: var(--font-color);
+    color: var(--bg-body);
+}
+
+article{
+    width: auto;
+    height: 90px;
+    padding: 25px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+    background-color: var(--main-bg-color);
+    color: var(--bg-body);
+    transition: 0.3s ease;
+    font-family: var(--main-font);
+}
+
+.recherche button:hover{
+    background-color: #134740;
 }
 
 h1{
@@ -36,7 +81,19 @@ h1{
     font-family: var(--main-font);
 }
 
-.afficher-commentaire article{
+.commentaire{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 800px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.commentaire article{
     width: auto;
     height: 90px;
     padding: 25px;
@@ -51,6 +108,6 @@ h1{
     font-family: var(--main-font);
 }
 
-.afficher-commentaire article:hover{
+.commentaire article:hover{
     background-color: #134740;
 }
