--- a/public/css/modif.css
+++ b/public/css/modif.css
@@ -65,7 +65,10 @@ input:focus {
 button {
     padding: 10px 12px;
     font-size: 16px; 
-    width: 80%; 
+    width: 100%; 
+    max-width: 250px; 
+    margin: 0 auto; 
+    display: block; 
     border: none;
     max-width: 250px;
     background-color:var( --cta); 
