--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -16,7 +16,7 @@ footer {
         display: flex;
         justify-content: space-between;
         img {
-            height: 100%;
+            height: 150px;
             width: auto;
         }
         nav {
