--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -70,3 +70,9 @@ main {
         }
     }
 }
+
+@media only screen and (max-width: 720px) {
+    .Bigsection {
+        width: 90% !important;
+    }
+}
